# lid

./: .gitignore  BUG_FIX_TASK.md  Cargo.toml  SPEC.md  TASK.md  TASK_REVIEW.md  config.yaml  lid.db  lid.db-shm  lid.db-wal
src/: config.rs  error.rs  main.rs
src/acl/: checker.rs
src/api/: admin.rs  auth.rs  files.rs  mod.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  oidc.rs  password.rs
src/db/: mod.rs  models.rs
src/web/: mod.rs
static/: index.html
