[package]
name = "lid"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
openidconnect = "4"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
axum-extra = { version = "0.9", features = ["cookie"] }
cookie = "0.18"
async-trait = "0.1"
futures = "0.3"
mime = "0.3"
mime_guess = "2"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = "3"
